# analytics-engineering

./: .gitignore  README.md  gen.py  pyproject.toml  username.json
Apache Superset/: Architecture.md  Docker Builds.md  Installation Methods.md  Quickstart.md  Upgrading Superset.md
Fabric/: .gitignore
MLflow/: mlflow.md  notes.md
SQL/: SQLNotes.md
Spark/: .gitignore  01-introduction-to-Apache-Spark.md  02-getting-started.md  03-Apache Spark's Structured APIs.md  history.md  introduction.md
Spark/datacamp/: notes.md
Spark/scripts/: ex-2.1.py  ex-2.2.py  ex-2.3.ipynb  learn.ipynb  test.py
containerization-virtualization/: Notes.md
containerization-virtualization/docker/: Notes.md
containerization-virtualization/kubernetes/: Notes.md
databricks/: notes.md
datacamp/DE/: DataEngineeringNotes.md
dbt/: .gitignore  Notes.md
dbt/Notes/: Notes.md
git/: notes.md
n8n/: notes.md
n8n/x-n8n/: .gitignore  MKimathi.json  TeslaHub.json  docker-compose.yml
python/: .gitignore  generate_lendsight_data.py  p2.py  practice.py  pyproject.toml  test.ipynb
python/02-Variables & Simple Data Types/: variables.md  zen_of_python.md
python/02-Variables_and_simple_data_types/: Complex-data-types.md  comments.md  numbers.md  prac.py
python/03-Lists/: 01-Intro-to-lists.md
python/04-Working-with-lists/: working-with-lists.md
python/04-working-with-lists/: working-with-lists.md
python/05-If_statements/: if-statements.md
python/06-Dictionaries/: Dictionaries.md
python/07-User Input and While Loops/: notes.md
shell-scripting/: Notes.md
(+157 files in other folders)
