[project]
name = "analytics-engineering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.3.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "pyspark>=4.1.2",
    "pytrends>=4.9.2",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
    "seaborn>=0.13.2",
    "torch>=2.12.1",
    "xgboost>=3.3.0",
]
